# FFmpegPlayer-FCC

./: .gitignore  README.md  build.gradle  build.sh  ffmpeg.txt  gradle.properties  gradlew.bat
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: litepal.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/include/libavcodec/: avcodec.h  defs.h
app/src/main/cpp/include/libavformat/: avformat.h
app/src/main/cpp/include/libcustom/: audio_channel.cpp  audio_channel.h  base_channel.cpp  base_channel.h  callback.cpp  callback.h  clog.cpp  clog.h  ffmpeg.cpp  ffmpeg.h  macro.h  safe_queue.h  video_channel.cpp  video_channel.h
app/src/main/java/com/z/player/: App.java
app/src/main/java/com/z/player/activity/: BaseActivity.java  MainActivity.java
app/src/main/java/com/z/player/activity2/: BaseActivity.java  BrowserActivity.java
app/src/main/java/com/z/player/adapter/: BaseRecyclerViewAdapter.java  ChannelListAdapter.java
app/src/main/java/com/z/player/bean/: Channel.java  ChannelInfo.java  ChannelZT.java  KeyValue.java  Login.java
app/src/main/java/com/z/player/common/: Const.java
app/src/main/java/com/z/player/help/: ActivityCollector.java  ChannelSorter.java  MulHelper.java
app/src/main/java/com/z/player/http/: AjaxCallback.java  HttpResponse.java  HttpUtils.java  ResponseCallback.java  SimpleResponseCallback.java
app/src/main/java/com/z/player/impl/: FFPlayer.java  VLCPlayer.java
app/src/main/java/com/z/player/interfaces/: IPlayer.java
app/src/main/java/com/z/player/js/: AndroidJs.java  Authentication.java  LogUtils.java
app/src/main/java/com/z/player/receiver/: BootReceiver.java  HomeReceiver.java  KeyPressReceiver.java  NetworkChangeReceiver.java
app/src/main/java/com/z/player/util/: AppUtils.java  DeviceUtils.java  FileUtils.java  SharedPreferencesUtils.java  SizeUtils.java  TimeUtils.java
app/src/main/java/com/z/player/widget/: FFPlayerView.java
app/src/main/res/drawable/: bg_0002.xml  custom_progress_drawable.xml  custom_thumb.xml  isb_indicator_rounded_corners.xml  isb_indicator_square_corners.xml  sl_common_focus.xml
app/src/main/res/layout/: activity_base.xml  activity_browser.xml  activity_ijkplayer.xml  activity_main.xml  include_seek_bar.xml  indicator_layout.xml  isb_indicator.xml  item_rv_channel.xml
app/src/main/res/values/: attr.xml  colors.xml  integers.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
